--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>eu.fbk.dh</groupId>
     <artifactId>aligner</artifactId>
     <version>0.1</version>
+
+    <parent>
+        <groupId>eu.fbk.parent</groupId>
+        <artifactId>parent</artifactId>
+        <version>2.0</version>
+    </parent>
+
     <build>
         <plugins>
             <plugin>
@@ -42,11 +49,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.12</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
             <version>1.7.12</version>
         </dependency>
         <dependency>
