--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>eu.fbk.dh</groupId>
     <artifactId>aligner</artifactId>
-    <version>0.1</version>
+    <version>1.0-SNAPSHOT</version>
 
     <parent>
         <groupId>eu.fbk.parent</groupId>
